--- a/views/index.htm
+++ b/views/index.htm
@@ -158,7 +158,7 @@
 	</div>
 	
 	
-	<script src="/js/jquery.js"></script>
+	<script src="/js/jquery.js" type="text/javascript:;"></script>
 	<script src="/js/slides.min.jquery.js"></script>
 	<script>
 	$(function(){
